src/tui/snapshots/mysteries__tui__render__tests__tui_fatal_error_daylight.snap
---
source: src/tui/render.rs
expression: text
---
‹text.secondary +bold›✦ mysteries‹/›‹text.muted›  agent · v1.1.0‹/›

‹border.strong›────────────────────────────────────────────────────────────────────────────────‹/›
‹accent.primary›> ‹/›‹text.title›换 anthropic provider 再跑一次‹/›

‹error.border bg=error.bg›┌─ ‹/›‹error.fg bg=error.bg +bold›致命错误‹/›‹error.border bg=error.bg› ────────────────────────────────────────────────────────────────────‹/›
‹error.border bg=error.bg›│ ‹/›‹error.fg bg=error.bg›鉴权失败:未找到 OPENAI_API_KEY。Agent Loop 已终止。‹/›
‹error.border bg=error.bg›└───────────────────────────────────────────────────────────────────────────────‹/›










‹text.muted›◇ 就绪‹/›
‹border.subtle›┌──────────────────────────────────────────────────────────────────────────────┐‹/›
‹border.subtle›│‹/›‹accent.primary›> ‹/›‹text.title›                                                     ‹/›‹text.muted›输入任务,或 / 执行命令…‹/›‹border.subtle›│‹/›
‹border.subtle›└──────────────────────────────────────────────────────────────────────────────┘‹/›
‹text.muted›mock · mock-model · iter 0/4 · 1 msgs · .‹/›
‹text.muted›▸ normal · shift+tab 切换 · think low‹/›
