src/tui/snapshots/mysteries__tui__render__tests__tui_jump_to_bottom_pill_idle.snap
---
source: src/tui/render.rs
expression: jump_to_bottom_pill_line(&text)
---
‹text.primary›                            ‹/›‹accent.primary bg=bg.surface›跳到底部 (ctrl+End) ↓‹/›
