src/tui/snapshots/mysteries__tui__render__tests__tui_mode_line_accept_edits.snap
---
source: src/tui/render.rs
expression: mode_line(&text)
---
‹accent.primary›▸▸ accept-edits‹/›‹text.muted› · shift+tab 切换‹/›
